--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -43,20 +43,53 @@
 \pagestyle{empty}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{abstract}
-
-摘要\enskip---\enskip可以輸入繁體字了。This electronic document is a live template. The various components of your paper [title, text, heads, etc.] are already defined on the style sheet, as illustrated by the portions given in this document.\\
-關鍵字：社群媒體、自動化內容分析、社會網絡分析、數位行動主義、政治參與
-
+摘要\enskip---\enskip可以輸入繁體字了。教育雲端服務平臺將進行資安設備調整作業，並於本次作業時程完成後，
+進行網站功能測試，屆時網路服務將會中斷，造成您的不便，敬請見諒。
 \end{abstract}
 
+\begin{keywords}
+關鍵字\enskip---\enskip社群媒體、自動化內容分析、社會網絡分析、數位行動主義、政治參與
+\end{keywords}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{INTRODUCTION}
 
-This template, modified in MS Word 2003 and saved as Word 97-2003 \& 6.0/95 RTF for the PC, provides authors with most of the formatting specifications needed for preparing electronic versions of their papers. All standard paper components have been specified for three reasons: (1) ease of use when formatting individual papers, (2) automatic compliance to electronic requirements that facilitate the concurrent or later production of electronic products, and (3) conformity of style throughout a conference proceedings. Margins, column widths, line spacing, and type styles are built-in; examples of the type styles are provided throughout this document and are identified in italic type, within parentheses, following the example. Some components, such as multi-leveled equations, graphics, and tables are not prescribed, although the various table text styles are provided. The formatter will need to create these components, incorporating the applicable criteria that follow.
+\section*{一、緒論}
 
-\section{PROCEDURE FOR PAPER SUBMISSION}
+社群網站的興起不謹改變了我們的社交生活，更改變了許多國家政治與權力的運作規則。
+
+\subsection*{資訊科技與人文社會跨領域研究的挑戰與契機}
+
+近年來，愈來愈多學者開始嘗試將計算機科學應用於人文社會科學領域，
+促成了數位典藏（digital archives）、數位人文（digital humanities）、計算社會科學（computational social science）、
+計算社會學（computational sociology）、社會模擬（social simulation）等新興研究領域。
+然而，這樣的跨領域研究是否真的有價值一直是備受爭議的。
+以下舉出一些此類研究常受到的批評，以及我從事此類研究的立場。
+
+常見對數位人文的批評包含：
+\,(1)\,只是用一些空洞的戲法來賣弄他們的研究能力，而沒有真正做出什麼新的分析。
+\,(2)\,容易忽略種族、階級、性別、文化、意識型態等面向。
+\,(3)\,在這個一切都已經被商品化了的現代社會中，人文學科日漸式微。但數位人文卻頂著科技的光環，而獲得了相當高的經費與聲望。
+\,(4)\,研究者的背景不夠多元，其研究可能帶有某些偏見。
+
+常見對社會模擬的批評包含：
+\,(1)\,將現實社會過度地簡化為一般化的法則。
+\,(2)\,模擬的成果仰賴預先建立好的模型，難以發現新的法則。
+\,(3)\,預先建立的模型往往充滿偏見。
+\,(4)\,模擬的成果並不能反映出現實社會的情況。
+
+我的回應是，我認為傳統社會科學研究法仍是不可或缺的：
+\,(1)\,並非所有問題都適合使用電腦來分析或模擬，有些現象無法被量化或歸納出一般化的法則。
+\,(2)\,人文社會科學做的不只是資料分析、統計而已，還包含人文關懷、詮釋、思辨、批判等。
+\,(3)\,因此田野工作、民族誌、訪談等研究法仍有其彌足珍貴的價值。
+
+然而資訊科技仍然能對人文學科做出貢獻：
+\,(1)\,數位人文提供了一個全新的視野來探究傳統上屬於人文社會科學領域的問題。
+\,(2)\,資訊科技能幫助人文學者更有效率地獲得知識。
+\,(3)\,資料探勘（data mining）、自然語言處理（natural language processing）等技術使一些過去被認為窒礙難行的研究成為可能。
+
+\section*{二、文獻探討}
 
 \subsection{Selecting a Template (Heading 2)}
 
