Still writing QQ

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -57,7 +57,24 @@
 
 \section*{一、緒論}
 
-社群網站的興起不謹改變了我們的社交生活，更改變了許多國家政治與權力的運作規則。
+社群網站的興起不僅改變了我們的社交生活，更改變了許多國家政治與權力的運作規則。
+在國內外皆有愈來愈多政治團體與公民團體透過網路來散佈其理念；
+許多具引響力的社會運動也是透過網路來連結潛在支持者或動員大眾；
+網路工具的靈活運用甚至還成為候選人能否贏得選舉的關鍵。
+
+這種利用網際網路來號召群眾、表達訴求的作法被稱為數位行動主義（digital activism）。
+發生在伊朗的綠色革命（Green Movement）、北非及中東的阿拉伯之春（Arab Spring）、
+美國的佔領華爾街運動（Occupy Wall Street），皆被人們普遍認為與網際網路，特別是社群媒體，有密切的關連。
+網際網路、社群媒體對社會與政治的影響也成為許多學者關注的新焦點。
+
+同樣的趨勢也發生在台灣。
+從洪仲丘事件、太陽花學運到反黑箱課綱運動，網際網路均對這些社會運動的促成扮演了相當關鍵的角色。
+這也讓許多社會學家、政治學家、傳播學家與計算機科學家開始對台灣的數位行動主義熱潮產生興趣。
+這不但是一個相當新穎的、跨領域的研究主題，這方面的研究對當今台灣社會也是相當重要的。
+
+在台灣，推特（Twitter）較不盛行，人們使用的社群網站以臉書（Facebook）為主。
+\,2016\,年總統選舉競選期間，各政黨、候選人、利益團體與意見領袖皆大量使用臉書來宣揚其政治理念。
+本研究的目的便是嘗試使用資訊科技，以創新的方法分析這些使用者於臉書上的公開貼文，探討使用者於社群網站上之政治活動的模式。
 
 \subsection*{資訊科技與人文社會跨領域研究的挑戰與契機}
 
