Wrting... Overleaf hanged...

--- a/7-thesis/citation.bib
+++ b/7-thesis/citation.bib
@@ -11,6 +11,7 @@ URL = {https://doi.org/10.1177/1461444811422894},
 eprint = {https://doi.org/10.1177/1461444811422894},
 abstract = {Among the many so-called microblogging services that allow their users to describe their current status in short posts, Twitter is probably among the most popular and well known. Since its launch in 2006, Twitter use has evolved and is increasingly used in a variety of contexts. This article utilizes emerging online tools and presents a rationale for data collection and analysis of Twitter users. The suggested approach is exemplified with a case study: Twitter use during the 2010 Swedish election. Although many of the initial hopes for e-democracy appear to have gone largely unfulfilled, the successful employment of the internet during the 2008 US presidential campaign has again raised voices claiming that the internet, and particularly social media applications like Twitter, provides interesting opportunities for online campaigning and deliberation. Besides providing an overarching analysis of how Twitter use was fashioned during the 2010 Swedish election campaign, this study identifies different user types based on how high-end users utilized the Twitter service. By suggesting a novel approach to the study of microblogging and by identifying user types, this study contributes to the burgeoning field of microblog research and gives specific insights into the practice of civic microblogging.}
 }
+
 @article{c2,
 author = {Weiwu Zhang and Thomas J. Johnson and Trent Seltzer and Shannon L. Bichard},
 title = {The Revolution Will be Networked},
@@ -24,6 +25,7 @@ URL = {https://doi.org/10.1177/0894439309335162},
 eprint = {https://doi.org/10.1177/0894439309335162},
 abstract = {Social networking is a phenomenon of interest to many scholars. While most of the recent research on social networking sites has focused on user characteristics, very few studies have examined their roles in engaging people in the democratic process. This paper relies on a telephone survey of Southwest residents to examine the extent to which reliance on social networking sites such as Facebook, MySpace and YouTube has engaged citizens in civic and political activities. More specifically, this study looks at the extent to which social networking sites influence political attitudes and democratic participation after controlling for demographic variables and the role of interpersonal political discussion in stimulating citizen participation. The findings indicate that reliance on social networking sites is significantly related to increased civic participation, but not political participation. Interpersonal discussion fosters both civic participation and political activity. Implications of the results for democratic governance will be discussed.}
 }
+
 @article{c3,
 author = {Bengü Hosch-Dayican and Chintan Amrit and Kees Aarts and Adrie Dassen},
 title = {How Do Online Citizens Persuade Fellow Voters? Using Twitter During the 2012 Dutch Parliamentary Election Campaign},
@@ -36,4 +38,32 @@ doi = {10.1177/0894439314558200},
 URL = {https://doi.org/10.1177/0894439314558200},
 eprint = {https://doi.org/10.1177/0894439314558200},
 abstract = {This article explores how Twitter was used by voters to participate in electoral campaigning during the Dutch election campaign of 2012. New social media networks like Twitter are believed to be efficient tools of communication between electoral candidates and voters during electoral campaign periods. Yet only few studies have been conducted so far to discover in what way the content of online discussions is being used for campaigning. In particular, there have been very few studies of electoral campaigning, which study the content of the social media messages sent by citizens. In order to understand the extent to which citizens utilize Twitter in different forms of electoral campaigning—that is, persuading followers about voting for a particular party or to conduct negative campaigning, we conducted an automated content analysis of a large corpus of tweets collected during the Dutch parliamentary election campaign of 2012. Our findings show that citizens participate significantly in online electoral campaigning on Twitter, whereas they differ from professional users in the style of campaigning. Persuasive campaigning is observed to a lesser extent among citizens than among politicians, while citizens more commonly use negative campaigning. Moreover, qualitative content analysis of campaigning tweets by citizens has revealed that expressions of emotions and opinions make up a large majority of negative tweets, indicating that citizens regard Twitter more as an outlet for expressing discontent than as a medium for negative campaigning.}
+}
+
+@misc{c4,
+  author = {{Socialbakers}},
+  title = {Definitive portal for social media statistics globally},
+  howpublished = {\url{https://www.socialbakers.com/statistics/}},
+  note = {Accessed: 2016-09-28}
+}
+
+@misc{c5,
+  author = {{Likeboy FB Ranking}},
+  title = {台灣粉絲團總排名名單},
+  howpublished = {\url{http://likeboy.tw}},
+  note = {Accessed: 2016-09-28}
+}
+
+@misc{c6,
+  author = {{中央研究院資訊科學研究所中文詞知識庫小組}},
+  title = {中文斷詞系統},
+  howpublished = {\url{http://ckipsvr.iis.sinica.edu.tw}},
+  note = {Accessed: 2016-10-08}
+}
+
+@misc{c7,
+  author = {Yu wen Pwu},
+  title = {ckip-client: A Python Client for CKIP Chinese Word Segmentation System},
+  howpublished = {\url{https://pypi.python.org/pypi/ckip-client}},
+  note = {Accessed: 2016-10-08}
 }
