Good morning, still writing...

--- a/7-thesis/citation.bib
+++ b/7-thesis/citation.bib
@@ -28,7 +28,7 @@ abstract = {Social networking is a phenomenon of interest to many scholars. Whil
 
 @article{c3,
 author = {Bengü Hosch-Dayican and Chintan Amrit and Kees Aarts and Adrie Dassen},
-title = {How Do Online Citizens Persuade Fellow Voters? Using Twitter During the 2012 Dutch Parliamentary Election Campaign},
+title = {How Do Online Citizens Persuade Fellow Voters? {Using} Twitter During the 2012 Dutch Parliamentary Election Campaign},
 journal = {Social Science Computer Review},
 volume = {34},
 number = {2},
@@ -62,8 +62,40 @@ abstract = {This article explores how Twitter was used by voters to participate 
 }
 
 @misc{c7,
-  author = {Yu wen Pwu},
-  title = {ckip-client: A Python Client for CKIP Chinese Word Segmentation System},
+  author = {Yu-Wen Pwu},
+  title = {ckip-client: A {Python} Client for {CKIP Chinese Word Segmentation System}},
   howpublished = {\url{https://pypi.python.org/pypi/ckip-client}},
   note = {Accessed: 2016-10-08}
+}
+
+@misc{c8,
+  author = {Charles Leifer},
+  title = {peewee: A small, expressive {ORM}},
+  howpublished = {\url{http://docs.peewee-orm.com}},
+  note = {Accessed: 2016-10-08}
+}
+
+@InProceedings{ c9,
+  author    = { Wes McKinney },
+  title     = { Data Structures for Statistical Computing in Python },
+  booktitle = { Proceedings of the 9th Python in Science Conference },
+  pages     = { 51 - 56 },
+  year      = { 2010 },
+  editor    = { St\'efan van der Walt and Jarrod Millman }
+}
+
+@Article{c10,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = 2007
 }
