--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -274,16 +274,18 @@
 本研究採用中央研究院資訊科學研究所中文詞知識庫小組所研發之中文斷詞系統\,\cite{c6}，
 搭配我自行開發之中文斷詞系統\,Python\,客戶端程式\,\cite{c7}，為蒐集到的貼文進行斷詞。
 本研究之所以選擇中央研究院的中文斷詞系統，是因為相較於其他非台灣開發的中文斷詞系統，此系統對台灣本地的文本有較好的表現。
+若要採用其他斷詞系統，可能得用台灣本地的語料重新訓練，才能達到同樣的表現。
 
-\subsection{Equations}
+完成後，我更做了完整性測試（integrity test），檢查斷詞前與斷詞後的貼文是否一致。
+測試結果發現斷詞系統相當穩定，僅極少數（不到\,3\%）的貼文含有錯誤（大多是出現亂碼）。
 
-The equations are an exception to the prescribed specifications of this template. You will need to determine whether or not your equation should be typed using either the Times New Roman or the Symbol font (please no other font). To create multileveled equations, it may be necessary to treat the equation as a graphic and insert it into the text after your paper is styled. Number equations consecutively. Equation numbers, within parentheses, are to position flush right, as in (1), using a right tab stop. To make your equations more compact, you may use the solidus ( / ), the exp function, or appropriate exponents. Italicize Roman symbols for quantities and variables, but not Greek symbols. Use a long dash rather than a hyphen for a minus sign. Punctuate equations with commas or periods when they are part of a sentence, as in
+為了讓後續的分析更方便，我使用\,peewee\,物件關係對映（object-relational mapping）套件\,\cite{c8}，
+將斷詞後的文本與詮釋資料儲存在資料庫中。
+往後若需查詢文本，只要透過\,peewee\,即可輕鬆完成，分析的結果也可透過\,peewee\,存入資料庫。
 
-$$
-\alpha + \beta = \chi \eqno{(1)}
-$$
+\subsection*{總體分佈（overall distribution）}
 
-Note that the equation is centered using a center tab stop. Be sure that the symbols in your equation have been defined before or immediately following the equation. Use (1), not Eq. (1) or equation (1), except at the beginning of a sentence: Equation (1) is . . .
+先對研究資料做最初步的分析。
 
 \subsection{Some Common Mistakes}
 \begin{itemize}
@@ -358,20 +360,14 @@ A conclusion section is not required. Although a conclusion may review the main 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{APPENDIX}
+\section*{附錄}
 
 Appendixes should appear before the acknowledgment.
 
-\section*{ACKNOWLEDGMENT}
+\section*{誌謝}
 
-The preferred spelling of the word acknowledgment in America is without an e after the g. Avoid the stilted expression, One of us (R. B. G.) thanks . . .  Instead, try R. B. G. thanks. Put sponsor acknowledgments in the unnumbered footnote on the first page.
+首先，我要感謝我的指導教授孫春在教授，對我的研究給予了許多寶貴的建議。
+另外，我要感謝中央研究院資訊科學研究所中文詞知識庫小組，提供中文斷詞線上服務。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
