no sleep all night so sad :(

--- a/7-thesis/citation.bib
+++ b/7-thesis/citation.bib
@@ -77,20 +77,20 @@ abstract = {This article explores how Twitter was used by voters to participate 
 
 @InProceedings{ c9,
   author    = { Wes McKinney },
-  title     = { Data Structures for Statistical Computing in Python },
+  title     = { Data Structures for Statistical Computing in {Python} },
   booktitle = { Proceedings of the 9th Python in Science Conference },
-  pages     = { 51 - 56 },
+  pages     = { 51-56 },
   year      = { 2010 },
   editor    = { St\'efan van der Walt and Jarrod Millman }
 }
 
 @Article{c10,
   Author    = {Hunter, J. D.},
-  Title     = {Matplotlib: A 2D graphics environment},
+  Title     = {Matplotlib: A {2D} graphics environment},
   Journal   = {Computing In Science \& Engineering},
   Volume    = {9},
   Number    = {3},
-  Pages     = {90--95},
+  Pages     = {90-95},
   abstract  = {Matplotlib is a 2D graphics package used for Python
   for application development, interactive scripting, and
   publication-quality image generation across user
