Major in CS, no more sleep.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -279,10 +279,15 @@
 
 本研究採用中央研究院資訊科學研究所中文詞知識庫小組所研發之中文斷詞系統\,\cite{c6}，
 搭配我自行開發之中文斷詞系統\,Python\,客戶端程式\,\cite{c7}，為蒐集到的貼文進行斷詞。
-本研究之所以選擇中央研究院的中文斷詞系統，是因為相較於其他非台灣開發的中文斷詞系統，此系統對台灣本地的文本有較好的表現。
+本研究之所以選擇中央研究院的中文斷詞系統，是因為此系統正確率高（其研發團隊亦稱此系統之正確率約為\,95\%\,$\sim$\,96\%），
+且相較於其他非台灣開發的中文斷詞系統，此系統對台灣本地的文本有較好的表現。
 若要採用其他斷詞系統，可能得用台灣本地的語料重新訓練，才能達到同樣的表現。
+另外，良好的未知詞辨識能力也是此系統的一大優點。
 
-完成後，我更做了完整性測試（integrity test），檢查斷詞前與斷詞後的貼文是否一致。
+由於本研究分析的文本是社群網站上的貼文，其形式較不嚴謹，
+常有錯別字、文法錯誤、使用空格或換行代替逗號或句號、夾雜表情符號或特殊字元等情形，
+故我在每則貼文開始斷詞前均會先對貼文進行簡單的預處理（pre-processing）。
+斷詞全部完成後，我更做了完整性測試（integrity test），檢查斷詞前與斷詞後的貼文是否一致。
 測試結果顯示斷詞系統相當穩定，僅極少數（不到\,3\%）的貼文含有錯誤（大多是出現亂碼）。
 
 為了讓後續的分析更方便，我使用\,peewee\,物件關係對映（object-relational mapping）套件\,\cite{c8}，
@@ -298,7 +303,48 @@
 
 \subsection*{關鍵字擷取（keyword extraction）}
 
-接著，本研究將進行三項不同層面的關鍵字分析。第一項分析是依粉絲專頁分析。
+接著，本研究試圖分析貼文的關鍵字，藉以找出競選期間人們關注的焦點。
+由於每筆貼文篇幅不一，且本研究關心的是一個範圍內的貼文的整體特性，
+故本研究不採用「分析單一貼文的關鍵字再將結果整合」的作法，而是「先整合多筆貼文再分析其關鍵字」，如此可得到較好的效果。
+
+本研究進行了三種不同層面的關鍵字分析。
+第一種分析方式是依作者劃分，合併相同粉絲專頁的貼文，分析各粉絲專頁發佈的貼文的關鍵字。
+第二種分析方式是依時間劃分，合併相同時間區間的貼文，分析各時間區間發佈的貼文的關鍵字。
+第三種分析方式是合併所有貼文，將之視為一個整體，分析整個競選期間所有人發佈的貼文的關鍵字。
+
+透過以上三項分析，我們可以回答：
+\,(1)\,各政黨／侯選人／意見領袖最關心的議題是什麼？
+\,(2)\,人們關注的焦點隨著時間有什麼樣的改變？
+\,(3)\,本次選舉人們最關心什麼？
+
+在技術上，本研究使用了\,SnowNLP\,函式庫\,\cite{c11}\,實作的\,TextRank\,演算法\,\cite{c12}。
+SnowNLP\,是一套針對中文的文本處理函式庫，惟其訓練資料僅包含簡體中文文本。
+為符合本研究之需求，本研究對該函式庫做了一些調整。
+本研究替換掉它的斷詞部份，只採用它的\,TextRank\,模組。
+另外，本研究所使用的停用字（stop word）清單，則是以它的停用字清單為基礎加以改良而成的。
+
+\subsection*{情感分析（sentiment analysis）}
+
+一個範圍內的貼文，可能都是在談論相近的主題，但每篇貼文所傳達的情感卻有很大的差異，彼此毫無關連。
+因此，與關鍵字擷取不同，情感分析不宜「先整合多筆貼文再分析其情感」，而應該採用「分析單一貼文的情感再將結果整合」的作法。
+
+本研究將貼文分為兩類：說服型競選（persuasive campaigning）貼文，即正面（positive）貼文，
+和攻擊型競選（negative campaigning）貼文，即負面（negative）貼文。
+本研究對攻擊型競選的定義是：貼文內容是以批評反對陣營為主、貼文重點是在批評反對陣營。
+本研究對說服型競選的定義是：非屬攻擊型競選的貼文。
+也就是說，中立的貼文在本研究裡也會被歸類到說服型競選貼文／正面貼文。
+
+本研究先分析個別貼文的情感，再統計各個時間區間內各個粉絲專頁一共發佈了多少筆貼文、其中攻擊型競選貼文有多少筆、佔全部的百分比。
+基於這些數據，我們可以回答：
+\,(1)\,哪些政黨／候選人／意見領袖最常使用攻擊型競選？
+\,(2)\,什麼時候人們最常使用攻擊型競選？
+\,(3)\,本次選舉有多少比例的貼文是攻擊型競選？
+
+在技術上，本研究使用了什麼。
+
+\subsection*{社會互動（social interaction）}
+
+在這裡輸入文字。
 
 \section*{四、研究結果與討論}
 
