--- a/7-thesis/citation.bib
+++ b/7-thesis/citation.bib
@@ -99,3 +99,23 @@ abstract = {This article explores how Twitter was used by voters to participate 
   doi       = {10.1109/MCSE.2007.55},
   year      = 2007
 }
+
+@misc{c11,
+  author = {{R. Wang (isnowfy)}},
+  title = {{SnowNLP}: Simplified Chinese Text Processing},
+  howpublished = {\url{https://github.com/isnowfy/snownlp}},
+  note = {Accessed: 2017-02-16}
+}
+
+@inproceedings{c12,
+  author = {Mihalcea, Rada and Tarau, Paul},
+  url = {http://www.aclweb.org/anthology/W04-3252},
+  title = {{TextRank}: Bringing Order into Texts},
+  booktitle = {Proceedings of the 2004 Conference on Empirical Methods in Natural Language Processing},
+  editor = {Dekang Lin and Dekai Wu},
+  year = {2004},
+  month = {July},
+  address = {Barcelona, Spain},
+  publisher = {Association for Computational Linguistics},
+  pages = {404-411}
+}
