No more sleep so sad... good morning :(

--- a/7-thesis/citation.bib
+++ b/7-thesis/citation.bib
@@ -119,3 +119,17 @@ abstract = {This article explores how Twitter was used by voters to participate 
   publisher = {Association for Computational Linguistics},
   pages = {404-411}
 }
+
+@book{c13,
+  author = {Christopher D. Manning and Prabhakar Raghavan and Hinrich Schütze},
+  title = {Introduction to Information Retrieval},
+  year = {2008},
+  publisher = {Cambridge University Press}
+}
+
+@misc{c14,
+  author = {Dan Jurafsky and Christopher D. Manning},
+  title = {Natural Language Processing: Lecture Slides from the {Stanford} {Coursera} course},
+  howpublished = {\url{http://web.stanford.edu/~jurafsky/NLPCourseraSlides.html}},
+  note = {Accessed: 2017-02-18}
+}
